...
                            Text("50,000").tag(50000)
                            Text("100,000").tag(100000)
                        }
                        .labelsHidden()
                        .pickerStyle(.menu)
                        .frame(width: ScopySize.Width.pickerMenu)
                        .accessibilityIdentifier("Settings.MaxItemsPicker")
                    }
                }

                SettingsCardDivider()

                SettingsCardRow {
...
