...
    },
    "Storage": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "存储"
          }
        }
      }
    },
    "Storage statistics unavailable": {
      "localizations": {
...
